--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,3 +1,23 @@
-<% flash.each do |name, msg| -%>
-  <%= content_tag :div, msg, class: "alert alert-#{name}" %>
-<% end -%>
+<% flash.each do |message_type, message| %>
+  <div class="flash-message alert alert-<%="#{message_type}"%> alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <%= message %>
+  </div>
+<% end %>
+
+<script type="text/javascript">
+<!--
+ 
+$(document).ready(function () {
+ 
+window.setTimeout(function() {
+    $(".flash-message").fadeTo(500, 0).slideUp(500, function(){
+        $(this).remove(); 
+    });
+}, 2000);
+ 
+});
+//-->
+</script>
