--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="col-md-4">
-    <div class="well"
+    <%= render 'shared/error_messages', model: post %>
+    <div class="well">
       <%= form_for post, html: {role: 'form'}  do |f| %>
-        <%= render 'shared/error_messages', model: post %>
+        
         <div class="form-group">
           <%= f.label :title %>
           <%= f.text_field :title, class: 'form-control' %>
