--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,8 @@
 
+<p class="pull-right">
+  <%= link_to 'Edit', edit_post_path(@post) %>
+</p>
+
 <!-- Post categories -->
 <p>
   <%= render @post.categories %>
@@ -19,10 +23,7 @@
       <small>
         <%= link_to @post.url.downcase, @post.url %>
       </small>
-      <br/>
-      <small>
-        <%= link_to 'Edit', edit_post_path(@post) %>
-      </small>
+      
     </div>
   </div>
 </div>
