--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -3,6 +3,7 @@
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
+      <h5>Please fix the following <%= pluralize_without_count(model.errors.count, "error") %>:</h5>
       <ul>
          <% model.errors.full_messages.each do |msg| %>
          <li><%= msg %></li>
