--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,22 @@
         <li>
             <%= link_to 'All Posts', posts_path %>
         </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Categories <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <% @categories.each do |category| %>
+              <li><%= link_to category.name.capitalize, category_path(category) %></li>
+            <% end %>
+            <% if @categories.any? %>
+              <li class="divider"></li>
+            <% end %>
+            <li>
+              <%= link_to new_category_path do %>
+                <span class="glyphicon glyphicon-plus"></span> New Category
+              <% end %>
+            </li>
+          </ul>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
