--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,10 +17,11 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Categories <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <% @categories.each do |category| %>
+            <% categories = Category.order(:name).all %>
+            <% categories.each do |category| %>
               <li><%= link_to category.name.capitalize, category_path(category) %></li>
             <% end %>
-            <% if @categories.any? %>
+            <% if categories.any? %>
               <li class="divider"></li>
             <% end %>
             <li>
