Added categories check boxes to post form.

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-4">
-    <%= render 'shared/error_messages', model: @category %>
+    <%= render 'shared/error_messages', object: @category %>
     <div class="well">
       <%= form_for @category, html: {role: 'form'}  do |f| %>
         
