--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -9,10 +9,7 @@
 <% all_posts = link_to 'All Posts', posts_path %>
 <%= render 'shared/content_title', title: "#{all_posts} > #{@category.name}".html_safe %>
 
-<div class="row">
-  <div class="col-md-6">
-    <%= render @category.posts %>
-  </div>
-</div>
+<%= render @category.posts.order(created_at: :desc) %>
+
 
 
