--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-4">
-    <%= render 'shared/error_messages', model: post %>
+    <%= render 'shared/error_messages', object: post %>
     <div class="well">
       <%= form_for post, html: {role: 'form'}  do |f| %>
         
@@ -16,6 +16,28 @@
           <%= f.label :description %>
           <%= f.text_area :description, class: 'form-control', rows: 4  %>
         </div>
+
+        <% categories = Category.order(:name).in_groups_of(2).transpose %>
+        <% first_column_of_categories = categories.first.compact %>
+        <% second_column_of_categories = categories.second.compact %>
+        <div class="row form-group">
+          <div class="col-md-6">
+            <%= f.collection_check_boxes(:category_ids, first_column_of_categories, :id, :name) do |cb| %>
+              <div class="checkbox">
+                <%= cb.label { cb.check_box(class: 'checkbox') + cb.text } %>
+              </div>
+            <% end %>
+          </div>
+
+          <div class="col-md-6">
+            <%= f.collection_check_boxes(:category_ids, second_column_of_categories, :id, :name) do |cb| %>
+              <div class="checkbox">
+                <%= cb.label { cb.check_box(class: 'checkbox') + cb.text } %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+
         <div class="form-actions">
           <%= f.submit class: 'btn btn-primary'%>
         </div>
