--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,11 @@
-<% if model.errors.any? %>
+<% if object.errors.any? %>
    <div class="alert alert-danger alert-dismissible fade in">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      <h5>Please fix the following <%= pluralize_without_count(model.errors.count, "error") %>:</h5>
+      <h5>Please fix the following <%= pluralize_without_count(object.errors.count, "error") %>:</h5>
       <ul>
-         <% model.errors.full_messages.each do |msg| %>
+         <% object.errors.full_messages.each do |msg| %>
          <li><%= msg %></li>
          <% end %>
       </ul>
