--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,29 +1,48 @@
-
 <p class="pull-right">
-  <%= link_to 'Edit', edit_post_path(@post) %>
+<%= link_to 'Edit', edit_post_path(@post) %>
 </p>
-
 <!-- Post categories -->
 <p>
-  <%= render @post.categories %>
+<%= render @post.categories %>
 </p>
-
 <!-- Post title -->
 <%= render 'shared/content_title', title: @post.title %>
-
 <div class="row">
-  <div class="col-md-4">
-    <div class="well">
-      
-      <!-- Post description -->
-      <p>
-        <%= @post.description %> 
-      </p>
-      
-      <small>
-        <%= link_to @post.url.downcase, @post.url %>
-      </small>
-      
-    </div>
+  <div class="col-md-6">
+    
+    <!-- Post description -->
+    <p>
+    <%= @post.description %>
+    </p>
+    
+    <small>
+    <%= link_to @post.url.downcase, @post.url %>
+    </small>
   </div>
 </div>
+<hr/>
+<div class="row">
+  <div class="col-md-6">
+    <%= render 'shared/error_messages', object: @comment %>
+    <%= form_for [@post, @comment], html: {role: 'form'}  do |f| %>
+    <div class="form-group">
+      <%= f.label :body, 'Please leave a comment' %>
+      <%= f.text_area :body, class: 'form-control', rows: 4  %>
+    </div>
+    <div class="form-actions">
+      <%= f.submit class: 'btn btn-primary'%>
+    </div>
+    <% end %>
+  </div>
+</div>
+<br/>
+<% if @post.comments.any? %>
+  <div class="row">
+    <div class="col-md-12">
+      <h4>
+        Comments:
+      </h4>
+      <%= render @post.comments %>
+    </div>
+  </div>
+<% end %>
