--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,7 +5,7 @@
       <%= render post.categories %>
       
       <!-- Post title -->
-      <h4><%= link_to post.title, post.url %></h4>
+      <h4><%= link_to post.title, post.url, target: '_blank' %></h4>
       
       <!-- Post description -->
       <p><%= post.description %></p>
@@ -14,7 +14,7 @@
       <p>
       <span class="quiet">posted by </span>
       <%= post.creator.present? ? post.creator.username : "Anonymous" %>
-      <small> at <%= post.created_at %></small>
+      <small> at <%= I18n.l post.created_at, format: :long %></small>
       </p>
       
       <!-- Post comments -->
