--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,8 +1,5 @@
 <% if object.errors.any? %>
-   <div class="alert alert-danger alert-dismissible fade in">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
+   <div class="alert alert-danger">
       <h5>Please fix the following <%= pluralize_without_count(object.errors.count, "error") %>:</h5>
       <ul>
          <% object.errors.full_messages.each do |msg| %>
