Navbar buttons redesigned

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,29 +14,33 @@
         <li>
             <%= link_to 'All Posts', posts_path %>
         </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Categories <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <% categories = Category.order(:name).all %>
-            <% categories.each do |category| %>
-              <li><%= link_to category.name.capitalize, category_path(category) %></li>
-            <% end %>
-            <% if categories.any? %>
-              <li class="divider"></li>
-            <% end %>
-            <li>
-              <%= link_to new_category_path do %>
-                <span class="glyphicon glyphicon-plus"></span> New Category
+      </ul>
+      
+      <div class="nav navbar-nav">
+        <div class="dropdown">
+            <button class="btn btn-default navbar-btn dropdown-toggle" type="button" id="categoriesDropdown" data-toggle="dropdown" aria-expanded="true">
+              Categories
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="categoriesDropdown">
+              <% categories = Category.order(:name).all %>
+              <% categories.each do |category| %>
+                <li><%= link_to category.name.capitalize, category_path(category) %></li>
               <% end %>
-            </li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-            <%= link_to 'New Post', new_post_path %>
-        </li>
-      </ul>
+              <% if categories.any? %>
+                <li class="divider"></li>
+              <% end %>
+              <li>
+                <%= link_to new_category_path do %>
+                  <span class="glyphicon glyphicon-plus"></span> New Category
+                <% end %>
+              </li>
+            </ul>
+        </div>
+      </div>
+      <div class="nav navbar-nav navbar-right">
+          <%= button_to 'New Post', new_post_path, method: :get, class: 'btn btn-success navbar-btn' %>
+      </div>
     </div>
   </div>
 </nav>
