--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -50,7 +50,18 @@
 
       <% if logged_in? %>
       <div class="btn-group navbar-right">
-        <%= button_to 'Log Out', logout_path, method: :delete, class: 'btn btn-success navbar-btn' %>
+        <button class="btn btn-success navbar-btn dropdown-toggle" 
+                type="button" 
+                data-toggle="dropdown">
+          <%= current_user.username.capitalize %>
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu">
+          <li><%= link_to 'My Profile', user_path(current_user) %></li>
+          <li><%= link_to 'Edit Profile', edit_user_path(current_user) %></li>
+          <li class="divider"></li>
+          <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+        </ul>
       </div>
       <% else %>
       <div class="btn-group navbar-right">
