--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,7 +13,13 @@
       <!-- Post who and when -->
       <p>
       <span class="quiet">posted by </span>
-      <%= post.creator.present? ? post.creator.username : "Anonymous" %>
+
+        <% if post.creator.present? %>
+          <%= link_to post.creator.username, user_path(post.creator) %>
+        <% else %>
+          <%= "Anonymous" %>
+        <% end %>
+
       <small> at <%= I18n.l post.created_at, format: :long %></small>
       </p>
       
