--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,23 @@
 <div class="row">
+  <div class="col-md-2">
+    <div class="well text-center">
+      <div class="row">
+        <div class="col-md-12">
+          <%= link_to vote_comment_path(comment, value: true), method: :post do %>
+            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+          <% end %>
+        </div>
+        <div class="col-md-12">
+          <strong><%= comment.total_votes %></strong>
+        </div>
+        <div class="col-md-12">
+          <%= link_to vote_comment_path(comment, value: false), method: :post do %>
+            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="col-md-6">
     <div class="well">
       <p><%= comment.body %></p>
