--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,10 +14,10 @@
 <h4>Activity:</h4>
 
 <%= bs_tabs do |t| %>
-  <%= t.bs_tab_for "Posts (#{@posts.count})", true do %>
+  <%= t.bs_tab_for "Posts (#{@posts.count})", active_tab == 'Post' ? true : false do %>
     <%= render @posts %>
   <% end %>
-  <%= t.bs_tab_for "Comments (#{@comments.count})" do %>
+  <%= t.bs_tab_for "Comments (#{@comments.count})", active_tab == 'Comment' ? true : false do %>
     <%= render @comments %>
   <% end %>
 <% end %>
