--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
   <body>
     <%= render 'layouts/navigation' %>
     <div id="main-container" class="container">
-      <%= render 'layouts/messages' %>
+      <div id="flash-messages">
+        <%= render 'layouts/messages' %>
+      </div>
       <%= yield %>
     </div>
   </body>
