--- a/app/views/votes/_vote_cast.html.erb
+++ b/app/views/votes/_vote_cast.html.erb
@@ -3,15 +3,15 @@
     <div class="well text-center">
       <div class="row">
         <div class="col-md-12">
-          <%= link_to up_vote_path, method: :post do %>
+          <%= link_to up_vote_path, method: :post, remote: true do %>
             <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
           <% end %>
         </div>
         <div class="col-md-12">
-          <strong><%= object.total_votes %></strong>
+          <strong id="total_votes_for_<%= object.id %>"><%= object.total_votes %></strong>
         </div>
         <div class="col-md-12">
-          <%= link_to down_vote_path, method: :post do %>
+          <%= link_to down_vote_path, method: :post, remote: true do %>
             <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
           <% end %>
         </div>
