--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" 
+      <button type="button"
             class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+        <span class="icon-bar"></span>
       </button>
       <%= link_to "Postit!", root_path, :class => 'navbar-brand' %>
     </div>
@@ -19,8 +19,8 @@
       </ul>
 
       <div class="btn-group">
-        <button class="btn btn-success navbar-btn dropdown-toggle" 
-                type="button" 
+        <button class="btn btn-success navbar-btn dropdown-toggle"
+                type="button"
                 data-toggle="dropdown">
           Categories <span class="caret"></span>
         </button>
@@ -29,10 +29,10 @@
           <% categories.each do |category| %>
             <li><%= link_to category.name.capitalize, category_path(category) %></li>
           <% end %>
-          <% if categories.any? && logged_in? %>
-            <li class="divider"></li>
-          <% end %>
-          <% if logged_in? %>
+          <% if logged_in? && isAdmin? %>
+            <% if categories.any? %>
+              <li class="divider"></li>
+            <% end %>
             <li>
               <%= link_to new_category_path do %>
                 <span class="glyphicon glyphicon-plus"></span> New Category
@@ -50,8 +50,8 @@
 
       <% if logged_in? %>
       <div class="btn-group navbar-right">
-        <button class="btn btn-success navbar-btn dropdown-toggle" 
-                type="button" 
+        <button class="btn btn-success navbar-btn dropdown-toggle"
+                type="button"
                 data-toggle="dropdown">
           <%= current_user.username.capitalize %>
           <span class="caret"></span>
@@ -67,11 +67,11 @@
       <div class="btn-group navbar-right">
         <%= button_to 'Log In', login_path, method: :get, class: 'btn btn-success navbar-btn' %>
       </div>
-      
+
       <div class="btn-group navbar-right">
         <%= button_to 'Sign Up', signup_path, method: :get, class: 'btn btn-success navbar-btn' %>
       </div>
-      
+
       <% end %>
     </div>
   </div>
