--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,6 +17,14 @@
         <%= f.label :password_confirmation, "Confirmation" %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
+      <div class="form-group">
+        <%= f.label :time_zone, "Timezone" %>
+        <%= f.time_zone_select :time_zone,
+                               ActiveSupport::TimeZone.us_zones,
+                               { :default => Time.zone.name },
+                               { class: 'form-control' } %>
+
+      </div>
       <div class="form-actions">
         <% if user.new_record? %>
           <%= f.submit 'Sign Up', class: 'btn btn-primary'%>
